--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                     <h6 class="pe-3 pt-2">Save:</h6>  
                                    <input type="text" class="form-control w-50" id="saving-input"> 
                                    <span class="ps-3 pe-3">%</span>
-                                   <button class="btn btn-primary w-25" type="button">Save</button>
+                                   <button class="btn btn-primary w-25" type="button" id="save-btn" >Save</button>
                                  </div>
                                  <h4 class="pt-5 fw-bolder">Saving Amount: <span id="saving-amount"></span></h4>
                                  <h4 class="pt-2 fw-bolder">Remaining Balance: <span id="remaining-balance"></span></h4>
