--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vitality Banks</title>
+    <!--Favicon-->
+    <link rel="shortcut icon" href="images/faveicon.png" type="image/x-icon">
     <!-- Customize css link -->
     <link rel="stylesheet" href="style/style.css">
     <!-- Bootstrap CSS -->
@@ -21,9 +23,13 @@
             <div class="container">
                 <h1 class="pt-5 pb-4 text-center fw-bold">Vitality Banks</h1>
                 <div class="row g-2 align-items-center ">
+                    <!------vitality images code start-------->
                     <div class="col-lg-6 text-center">
                         <img src="images/vitality-banks.jpeg" class="img-fluid rounded"> 
                     </div>
+                    <!------vitality images code end-------->
+
+                <!---------vitality Calculate code start------------->
                     <div class="col-lg-6 p-lg-5">
                         <div class="text-center p-lg-5 bg-light rounded">
                                 <h3 class="fw-bolder">Income</h3>
@@ -57,6 +63,8 @@
                                  <h4 class="pt-2 fw-bolder">Remaining Balance: <span id="remaining-balance"></span></h4>
                         </div>
                     </div>
+                <!---------vitality Calculate code end------------->
+
                 </div>
             </div>
         </section>
